--- a/app/src/main/res/layout/activity_food_details.xml
+++ b/app/src/main/res/layout/activity_food_details.xml
@@ -37,7 +37,7 @@
                     android:layout_height="30dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="@drawable/back_button"
+                    android:background="@drawable/gemini_back_button"
                     android:contentDescription="@string/back"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
