--- a/app/src/main/res/layout/recycler_layout.xml
+++ b/app/src/main/res/layout/recycler_layout.xml
@@ -19,7 +19,7 @@
             android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/red"
+            android:background="@color/darkVine"
             android:padding="18dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
